<resources>
    <string name="app_name">APM</string>
    <string name="init_string">初始化…</string>
    <string name="tips">提示</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="dialog_permission_error">权限不足,程序无法运行！</string>
    <string name="config_permission">去配置</string>
    <string name="dialog_exit">退出</string>
    <string name="int_text">%d</string>
    <string name="float_text">%.1f</string>
    <string name="project_info">工程信息</string>
    <string name="design_depth">设计埋深(mm)</string>
    <string name="curve_title">螺旋桩施拧监测仪</string>
    <string name="param_back_bottom">返回并保存</string>
    <string name="builder_param">施工参数</string>
    <string name="design_param">设计参数</string>
    <string name="monitor_param">监测参数</string>
    <string name="warring_param">预警设置</string>
    <string name="sensor_param">传感器配置</string>
    <string name="main_device">主机信息</string>
    <string name="error_record_interval">数据记录间隔不能小于或等于0ms</string>
    <string name="error_record_interval_depth">数据记录间隔不能小于或等于0cm</string>
    <string name="error_torsion_max">扭矩上限值不能小于或等于0kN·m</string>
    <string name="error_torsion_min">扭矩下限值不能小于或等于0kN·m</string>
    <string name="error_footage_max">进尺上限值不能小于或等于cm</string>
    <string name="error_footage_min">进尺下限值不能小于或等于cm</string>
    <string name="error_max_angle">最大允许倾角不能小于0°</string>
    <string name="type_depth">按深度采集</string>
    <string name="type_time">按时间采集</string>
    <string name="error_design_direction">设计方位角不能小于等于0°</string>
    <string name="error_design_outcrop">设计露头不能小于等于0mm</string>
    <string name="error_design_depth">设计埋深不能小于等于0mm</string>
    <string name="error_anchor_diameter">锚盘直径不能小于等于0mm</string>
    <string name="error_machine_type">机器型号不能包含%s</string>
    <string name="error_machine_no">机器编号不能包含%s</string>
    <string name="error_plate_no">锚盘编号不能包含%s</string>
    <string name="sample_machine_no">采集仪主机编号</string>
    <string name="torsion_sensor">扭矩传感器</string>
    <string name="angle_sensor">倾角传感器</string>
    <string name="displacement_sensor">激光测距传感器</string>
    <string name="bluetooth">蓝牙模块</string>
    <string name="unknown_device">未知设备(%d)</string>
    <string name="error_project_name">工程名称不能包含(%s)</string>
    <string name="error_pile_no">桩号不能包含%s</string>
    <string name="error_serial_no">流水号不能包含(%s)</string>
    <string name="error_base_no">基础编号不能包含(%s)</string>
    <string name="error_base_anchor_no">基锚编号不能包含(%s)</string>
    <string name="error_tall_no">塔位编号不能包含(%s)</string>
    <string name="error_build_position">施工部位不能包含(%s)</string>
    <string name="default_sensor_no">2001</string>
    <string name="param_project_name">工程名称</string>
    <string name="param_pile_no">编号</string>
    <string name="param_serial_no">流水号</string>
    <string name="param_base_no">基础编号</string>
    <string name="param_base_anchor_no">基锚编号</string>
    <string name="param_tall_no">塔位编号</string>
    <string name="param_build_position">施工部位</string>
    <string name="param_machine_type">机械型号</string>
    <string name="param_machine_no">机械编号</string>
    <string name="param_anchor_diameter">锚杆直径(mm)</string>
    <string name="param_anchor_plate_no">锚盘编号</string>
    <string name="param_plate_count">锚盘数量</string>
    <string name="param_design_depth">设计埋深(mm)</string>
    <string name="param_design_outcrop">设计露头(mm)</string>
    <string name="param_design_angle">设计倾角(°)</string>
    <string name="param_design_direction">设计方位角(°)</string>
    <string name="param_λB">土体高度影响系数λB</string>
    <string name="param_record_type">数据采集方式</string>
    <string name="param_record_depth_interval">记录间隔(cm)</string>
    <string name="param_record_time_interval">记录间隔(s)</string>
    <string name="param_torsion_max">扭矩上限值(kN·m)</string>
    <string name="param_torsion_min">扭矩下限值(kN·m)</string>
    <string name="param_footage_max">进尺上限值(cm)</string>
    <string name="param_footage_min">进尺下限值(cm)</string>
    <string name="param_angle_max">最大允许倾角(°)</string>
    <string name="param_version_name">软件版本号</string>
    <string name="param_displacement_no">激光测距传感器编号</string>
    <string name="param_torsion_bluetooth_no">扭矩传感器蓝牙编号</string>
    <string name="param_torsion_sensor_no">扭矩传感器编号</string>
    <string name="param_angle_sensor_no">倾角传感器编号</string>
    <string name="param_sample_machine_no">采集仪主机编号</string>
    <string name="realtime_depth">深度(cm)</string>
    <string name="realtime_torsion">扭矩(kN·m)</string>
    <string name="realtime_angle">偏转角(°)</string>
    <string name="realtime_footage">进尺(mm)</string>
    <string name="realtime_turns">圈数</string>
    <string name="menu_operating">操作菜单</string>
    <string name="all_params_correct">所有参数无误，是否开始新的监测？</string>
    <string name="empty_text"> </string>

    <string name="monitor_time">施工时间</string>
    <string name="loading">正在加载中…</string>
    <string name="okAndClose">确认关闭</string>
    <string name="No">序号</string>
    <string name="preset_loading">深度(m)</string>
    <string name="Grade_Time">安装扭矩(kN·m)</string>
    <string name="End_Time">倾斜角度(°)</string>
    <string name="Grade_S">进尺(mm)</string>
    <string name="No_Title">传感器编号</string>
    <string name="Press_Title">蓝牙编号</string>
    <string name="Loading_Title">读数</string>
    <string name="rssi">信号强度(db)</string>
    <string name="battery">电池电压(V)</string>
    <string name="monitor_sensor">监视传感器</string>
    <string name="torsion_voltage">电压值(mV)</string>
    <string name="angle_default_value">0.0</string>

</resources>