<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabLayout"
    android:layout_marginBottom="30dp"
    style="@style/table_layout_style">

    <TableRow
      style="@style/table_row_style"
      android:background="@color/gray_80">

        <TextView
            android:id="@+id/title1Tv"
            style="@style/table_text_style"
            android:text="@string/No_Title" />

        <TextView
            android:id="@+id/title2Tv"
            style="@style/table_text_style"
            android:text="@string/Press_Title" />

        <TextView
            android:id="@+id/title3Tv"
            style="@style/table_text_style"
            android:text="@string/Loading_Title" />

        <TextView
            android:id="@+id/title4Tv"
            android:visibility="gone"
            style="@style/table_text_style"
            android:text="@string/rssi" />

        <TextView
            android:id="@+id/title5Tv"
            android:visibility="gone"
            style="@style/table_text_style"
            android:text="@string/battery" />
    </TableRow>

</TableLayout>
