<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/gray_95"
    android:orientation="horizontal"
    android:layout_height="48dp"
    android:layout_width="wrap_content">

    <include layout="@layout/vertical_divider"/>

    <TextView
        android:textSize="14sp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:minWidth="60dp"
        style="@style/data_table_text_style"
        android:text="@string/No" />

    <include layout="@layout/vertical_divider"/>

    <TextView
        android:textSize="14sp"
        android:padding="2dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:minWidth="80dp"
        style="@style/data_table_text_style"
        android:text="@string/preset_loading" />

    <include layout="@layout/vertical_divider"/>

    <TextView
        android:textSize="14sp"
        android:padding="2dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:minWidth="80dp"
        style="@style/data_table_text_style"
        android:text="@string/Grade_Time" />

    <include layout="@layout/vertical_divider"/>

    <TextView
        android:textSize="14sp"
        android:padding="2dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:minWidth="80dp"
        style="@style/data_table_text_style"
        android:text="@string/End_Time" />

    <include layout="@layout/vertical_divider"/>

    <TextView
        android:textSize="14sp"
        android:padding="2dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:minWidth="80dp"
        style="@style/data_table_text_style"
        android:text="@string/Grade_S" />

    <include layout="@layout/vertical_divider"/>


</LinearLayout>