<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jiace="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:background="@color/param_side_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical">

        <LinearLayout
            android:onClick="onClickBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="64dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_navigate_before_24" />

            <TextView
                android:id="@+id/settingName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingHorizontal="2dp"
                android:text="@string/param_back_bottom"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:background="@color/gray_60"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <ListView
            android:id="@+id/sideBarList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@null"
            android:overScrollMode="never"
            android:scrollbars="none"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <ScrollView
        android:background="@color/param_content_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:overScrollMode="never"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:paddingHorizontal="40dp">

            <!--工程信息-->
            <LinearLayout
                android:id="@+id/projectParamLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/title_text_style"
                    android:layout_marginBottom="4dp"
                    android:text="@string/project_info" />

                <com.jiace.apm.widget.NoScrollGridView
                    android:id="@+id/gridViewProject"
                    style="@style/grid_view_style"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp"
                    android:visibility="visible" />

            </LinearLayout>

            <!--测试规范 测试方法-->
            <LinearLayout
                android:id="@+id/builderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/title_text_style"
                    android:layout_marginBottom="4dp"
                    android:text="@string/builder_param" />

                <com.jiace.apm.widget.NoScrollGridView
                    android:id="@+id/gridViewBuildParam"
                    style="@style/grid_view_style"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp"
                    android:visibility="visible" />

                <TextView
                    android:layout_marginTop="10dp"
                    style="@style/title_text_style"
                    android:layout_marginBottom="4dp"
                    android:text="@string/design_param" />

                <com.jiace.apm.widget.NoScrollGridView
                    android:id="@+id/gridViewBuildDesignParam"
                    style="@style/grid_view_style"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp"
                    android:visibility="visible" />

            </LinearLayout>

            <!--测试规范 判稳标准-->
            <LinearLayout
                android:id="@+id/monitorParamLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/title_text_style"
                    android:layout_marginBottom="4dp"
                    android:text="@string/monitor_param" />

                <com.jiace.apm.widget.NoScrollGridView
                    android:id="@+id/gridViewStandardMonitorType"
                    style="@style/grid_view_style"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp" />

                <TextView
                    android:layout_marginTop="10dp"
                    style="@style/title_text_style"
                    android:layout_marginBottom="4dp"
                    android:text="@string/warring_param" />

                <com.jiace.apm.widget.NoScrollGridView
                    android:id="@+id/gridViewMonitorParam"
                    style="@style/grid_view_style"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/sensorParamLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/title_text_style"
                    android:layout_marginBottom="4dp"
                    android:text="@string/sensor_param" />

                <com.jiace.apm.widget.NoScrollGridView
                    android:id="@+id/gridViewSensorParam"
                    style="@style/grid_view_style"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp" />
            </LinearLayout>

            <!--外设管理-->
            <LinearLayout
                android:id="@+id/deviceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/title_text_style"
                    android:layout_marginBottom="4dp"
                    android:text="@string/main_device" />

                <com.jiace.apm.widget.NoScrollGridView
                    android:id="@+id/gridViewMainDevice"
                    style="@style/grid_view_style"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp" />

                <com.jiace.apm.widget.SensorManagerView
                    android:layout_marginTop="20dp"
                    android:id="@+id/SampleMachineView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    jiace:type="SampleMachine" />

                <com.jiace.apm.widget.SensorManagerView
                    android:id="@+id/TorsionSensorView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    jiace:type="TorsionSensor" />

                <com.jiace.apm.widget.SensorManagerView
                    android:id="@+id/AngleOfDipSensorView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    jiace:type="AngleOfDipSensor" />

                <com.jiace.apm.widget.SensorManagerView
                    android:id="@+id/DisplacementView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    jiace:type="Displacement" />

                <com.jiace.apm.widget.SensorManagerView
                    android:id="@+id/BluetoothView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    jiace:type="Bluetooth" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>